GNOME Bugzilla – Bug 737273
keyfile-only plugin fails to DHCP
Last modified: 2014-10-07 14:02:02 UTC
I'm tagging NM back to fb7b08388e9de5440962337e20a823bbf9d019ae in Continuous. Previous discussion: <walters> [10:48:47] hi, recently NM stopped being able to create default wired connections if there's no distro plugins; I see (eth0): couldn't create default wired connection: No plugin supported adding this connection <walters> [10:48:50] (in Continuous) <walters> [10:50:40] i thought the keyfile plugin was built-in <dcbw1> [10:55:11] walters: yeah, that's odd <dcbw1> [10:56:21] walters: do you see "Loaded plugin keyfile: (c) 2007 - 2013 Red Hat, Inc. To report bugs please use the NetworkManager mailing list." in the logs? <walters> [10:56:42] yep <walters> [10:57:04] maybe this is beb18050b5a00a704a74bff5c10919b44f087122 ? <dcbw1> [10:57:54] walters: I think it's likely fallout from the libnm gdbus merge <dcbw1> [10:58:21] or could be that, but I"d suspect not
Created attachment 286995 [details] [review] devices: fix default ethernet connection code Creation of default wired connections got broken by an incomplete rebase of dcbw/internal-device-factories after danw/libnm-props landed.
Looks good to me.
Attachment 286995 [details] pushed as 94c3f1f - devices: fix default ethernet connection code